REGRESSION (r45620): Node list caches never deleted https://bugs.webkit.org/show_bug.cgi?id=61268 <rdar://problem/9467379>

Reviewed by Oliver Hunt.

NodeListsNodeData::isEmpty() tests if RefCounted objects have refcount of zero which is impossible.
As a results NodeList caches are never deleted, causing bad performance in DOM mutating operations as
they repeatedly invalidate caches.

* dom/Node.cpp:
(WebCore::Node::childNodes):
    Construct m_childNodeListCaches lazily.

(WebCore::Node::unregisterDynamicNodeList):
(WebCore::Node::notifyLocalNodeListsAttributeChanged):
(WebCore::Node::notifyLocalNodeListsChildrenChanged):
(WebCore::Node::removeNodeListCacheIfPossible):
    Add a helper.

(WebCore::NodeListsNodeData::invalidateCaches):
    Invalidate m_childNodeListCaches by clearing it if there are no additional clients

(WebCore::NodeListsNodeData::isEmpty):
    Test emptiness of various NodeListCaches simply by testing hash emptiness instead of testing for non-zero ref count of items.
    m_childNodeListCaches is empty if it is null.

* dom/Node.h:
* dom/NodeRareData.h:
(WebCore::NodeListsNodeData::NodeListsNodeData):
    Construct m_childNodeListCaches lazily.



Canonical link: https://commits.webkit.org/76727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87147 268f45cc-cd09-0410-ab3c-d52691b4dbfc